# metall

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  conanfile.py  mkdocs.yml
.github/workflows/: ci-test.yml  publish-conan-branch-package.yml
api/: index.html  navtreedata.js
bench/adjacency_list/: CMakeLists.txt  bench_driver.hpp  kernel.hpp  numa_aware_kernel.hpp  run_adj_list_bench_bip.cpp  run_adj_list_bench_bip_extend.cpp  run_adj_list_bench_metall.cpp  run_adj_list_bench_pmem.cpp  run_adj_list_bench_reflink_snapshot.cpp  run_bench.sh
bench/adjacency_list/edge_generator/: CMakeLists.txt  generate_rmat_edge_list.cpp  rmat_edge_generator.hpp
bench/adjacency_list/test/: CMakeLists.txt  compare_key_value_lists.cpp  destroy_metall.cpp  extend_metall.cpp  open_metall.cpp  test.sh  test_large.sh
bench/bfs/: CMakeLists.txt  bench_driver.hpp  kernel.hpp  run_bench.sh  run_bfs_bench_bip.cpp  run_bfs_bench_metall.cpp  run_bfs_bench_metall_multiple.cpp
bench/container/: CMakeLists.txt  bench_common.hpp  run_map_bench.cpp  run_unordered_map_bench.cpp  run_vector_bench.cpp
bench/data_structure/: multithread_adjacency_list.hpp
bench/mapping/: CMakeLists.txt  run_mapping_bench.cpp
bench/offset_ptr/: CMakeLists.txt  run_offset_ptr_bench.cpp
bench/rand_engine/: CMakeLists.txt  run_rand_engine_bench.cpp
bench/simple_alloc/: CMakeLists.txt  kernel.hpp  run_bench.sh  run_simple_allocation_bench_metall.cpp
bench/utility/: numa.hpp
cmake/: boilerplate_init.cmake  install_components.cmake  main-component-config.cmake.in
docs/: Doxyfile.in
docs/readthedocs/: index.md
example/: logger.cpp  snapshot.cpp
examples/: CMakeLists.txt  README.md  adjacency_list_graph.cpp  allocator_aware_type.cpp  c_api.c  complex_map.cpp  concurrent_map.cpp  copperr_containers.cpp  csr_graph.cpp  datastore_description.cpp  fallback_allocator_adaptor.cpp  logger.cpp  metall_containers.cpp  mpi_create.cpp  mpi_open.cpp  multilevel_containers.cpp  object_attribute.cpp  object_attribute_api_list.cpp  offset_pointer.cpp  simple.cpp  snapshot.cpp  static_mutex.cpp  string.cpp  string_map.cpp  vector_of_vectors.cpp
examples/cmake/FetchContent/: CMakeLists.txt
examples/cmake/find_package/: CMakeLists.txt  README.md
examples/cmake/src/: c_example.c  cpp_example.cpp
examples/container/: CMakeLists.txt  string_key_store.cpp
examples/graph_data_structure/: csr.hpp
examples/json/: CMakeLists.txt  jgraph.cpp  json_create.cpp  json_open.cpp  vector_of_json.cpp
execs/: CMakeLists.txt
include/metall/: basic_manager.hpp  exception.hpp  logger.h  logger.hpp  logger_interface.h  metall.hpp  object_attribute_accessor.hpp  stl_allocator.hpp
libs/: CMakeLists.txt
libs/default-logger/: CMakeLists.txt
libs/default-logger/src/dice/copperr/: default_logger.cpp
libs/default-logger/src/dice/metall/: default_logger.cpp
libs/ffi/: CMakeLists.txt
libs/ffi/src/dice/ffi/: copperr.cpp  copperr.h  copperr_internal.hpp  metall.cpp  metall.h  metall_internal.hpp
libs/metall/: CMakeLists.txt
libs/metall/src/dice/metall/: basic_manager.hpp  logger.hpp  logger_interface.h  metall.hpp  object_attribute_accessor.hpp  offset_ptr.hpp  stl_allocator.hpp  tags.hpp  version.hpp
libs/metall/src/dice/metall/container/: concurrent_map.hpp  deque.hpp  list.hpp  map.hpp  priority_queue.hpp  queue.hpp  scoped_allocator.hpp  set.hpp  stack.hpp  string.hpp  string_key_store.hpp  string_key_store_locator.hpp  unordered_flat_map.hpp  unordered_flat_set.hpp  unordered_map.hpp  unordered_node_map.hpp  unordered_node_set.hpp  unordered_set.hpp  vector.hpp
libs/metall/src/dice/metall/container/experimental/jgraph/: jgraph.hpp
libs/metall/src/dice/metall/container/experimental/json/: json.hpp
libs/metall/src/dice/metall/detail/: array_construct.hpp  bitset.hpp  builtin_functions.hpp  char_ptr_holder.hpp  file.hpp  file_clone.hpp  hash.hpp  in_place_interface.hpp  memory.hpp  mmap.hpp  mutex.hpp  named_proxy.hpp  parameter_pack.hpp  proc.hpp  ptree.hpp  soft_dirty_page.hpp  static_bitset.hpp  time.hpp  utilities.hpp  uuid.hpp
libs/metall/src/dice/metall/json/: array.hpp  equal.hpp  json.hpp  json_fwd.hpp  key_value_pair.hpp  object.hpp  parse.hpp  pretty_print.hpp  serialize.hpp  string.hpp  value.hpp  value_from.hpp  value_to.hpp
libs/metall/src/dice/metall/json/details/: compact_object.hpp  indexed_object.hpp
libs/metall/src/dice/metall/kernel/: attributed_object_directory.hpp  bin_directory.hpp  bin_number_manager.hpp  chunk_directory.hpp  manager_kernel.hpp  manager_kernel_fwd.hpp  manager_kernel_impl.ipp  manager_kernel_profile_impl.ipp  multilayer_bitset.hpp  object_cache.hpp  object_cache_container.hpp  object_size_manager.hpp  segment_allocator.hpp  segment_header.hpp
libs/metall/src/dice/metall/kernel/segment_storage/: mmap_segment_storage.hpp  umap_sparse_segment_storage.hpp
libs/metall/src/dice/metall/utility/: container_of_containers_iterator_adaptor.hpp  datastore_ls.hpp  fallback_allocator_adaptor.hpp  filesystem.hpp  hash.hpp  metall_mpi_adaptor.hpp  metall_mpi_datastore.hpp  mpi.hpp  mutex.hpp  open_mp.hpp  random.hpp
scripts/: test_kernel.sh
src/: CMakeLists.txt  default_logger.cpp  mpi_datastore_ls.cpp
test/: CMakeLists.txt  test_logger.cpp  test_utility.hpp
test/kernel/: manager_test.cpp  (+8 more)
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt  test_utility.hpp
tests/container/: CMakeLists.txt  concurrent_map_test.cpp  fallback_allocator_adaptor_test.cpp  stl_allocator_test.cpp  string_key_store_test.cpp
tests/container/json/: CMakeLists.txt  json_array.cpp  json_object.cpp  json_value.cpp
tests/ffi/: CMakeLists.txt  ffi_test.cpp
tests/kernel/: CMakeLists.txt  attributed_object_directory_test.cpp  bin_directory_test.cpp  bin_manager_test.cpp  chunk_directory_test.cpp  copy_file_test.cpp  manager_multithread_test.cpp  manager_test.cpp  mmap_segment_storage_test.cpp  multilayer_bitset_test.cpp  multimanager_test.cpp  object_attribute_accessor_test.cpp  object_cache_test.cpp  snapshot_test.cpp
tests/utility/: CMakeLists.txt  bitset_test.cpp
(+171 files in other folders)
